# virtual-cell

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  benchmark.json  benchmark.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: benchmark.json  benchmark.md  benchmark_report.json  benchmark_report.md  free-resources-guide.md  index.html
examples/: cellforge_demo.py  full_benchmark.py
saas/: app.py
saas/templates/: benchmark.html
scripts/: deploy.sh  run_api.sh
tests/: test_api_vcc.py  test_cellforge_full.py  test_enhanced.py  test_lingshu.py  test_virtual_cell.py
virtual_cell/: __init__.py  api.py  benchmark.py  checkpoints.py  cli.py  downloader.py  registry.py  report.py  visualizer.py
virtual_cell/datasets/: __init__.py  base.py
virtual_cell/generators/: __init__.py  base.py  cellforge.py  cellforge_full.py  model_adapter.py
virtual_cell/models/: __init__.py  base.py  lingshu_cell.py
virtual_cell/tasks/: __init__.py
virtual_cell/vcc/: __init__.py  pipeline.py
